; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/sprd/extr_pll.c_sprd_pll_set_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/sprd/extr_pll.c_sprd_pll_set_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.sprd_pll = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_hw*, i64, i64)* @sprd_pll_set_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sprd_pll_set_rate(%struct.clk_hw* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.clk_hw*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.sprd_pll*, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.clk_hw*, %struct.clk_hw** %4, align 8
  %9 = call %struct.sprd_pll* @hw_to_sprd_pll(%struct.clk_hw* %8)
  store %struct.sprd_pll* %9, %struct.sprd_pll** %7, align 8
  %10 = load %struct.sprd_pll*, %struct.sprd_pll** %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @_sprd_pll_set_rate(%struct.sprd_pll* %10, i64 %11, i64 %12)
  ret i32 %13
}

declare dso_local %struct.sprd_pll* @hw_to_sprd_pll(%struct.clk_hw*) #1

declare dso_local i32 @_sprd_pll_set_rate(%struct.sprd_pll*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
